--- a/index.html
+++ b/index.html
@@ -2,18 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Simple Portfolio</title>
+  <title>Bachelor of Computer Science Portfolio</title>
   <style>
-    body { font-family: sans-serif; max-width: 600px; margin: 40px auto; background: #f9f9f9; padding: 20px; border-radius: 10px; }
-    h1 { color: #2c3e50; }
-    .info { margin-top: 20px; }
+    body { font-family: sans-serif; max-width: 700px; margin: 40px auto; background: #f9f9f9; padding: 30px; border-radius: 10px; }
+    h1 { color: #2c3e50; margin-bottom: 10px; }
+    .subtitle { font-size: 1.15em; color: #34495e; margin-bottom: 20px; }
+    h2 { color: #2980b9; margin-top: 30px; }
+    ul { margin-left: 20px; }
+    .section { margin-bottom: 30px; }
   </style>
 </head>
 <body>
-  <h1>Your Name</h1>
-  <div class="info">
-    <p>Hi, I'm a developer.</p>
-    <p>Contact: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+  <h1>BACHELOR OF COMPUTER SCIENCE</h1>
+  <div class="subtitle">Computer Science graduate passionate about backend and full-stack development, with proven hands-on experience in building web applications. Skilled in backend development, database management, web design, and machine learning applications. Experienced in delivering real-world projects using PHP, MySQL, Python, C#, and modern web technologies. Strong problem-solving and collaborative skills with a focus on scalable, maintainable solutions.</div>
+
+  <div class="section">
+    <h2>Education</h2>
+    <ul>
+      <li><strong>Bachelor of Computer Science</strong> | Universiti Teknologi MARA, Kampus Cawangan Kuala Terengganu, Malaysia (Oct 2021 – Jun 2024)<br>
+      Bachelor of Computer Science (Honours), Second Class (Upper), CGPA 3.0</li>
+      <li><strong>Diploma in Computer Science</strong> | Universiti Teknologi MARA, Kampus Sunagi Petani Cawangan Kedah, Malaysia (Jun 2018 – Aug 2021)</li>
+    </ul>
   </div>
 </body>
 </html>
