--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     h1 { color: #2c3e50; margin-bottom: 10px; }
     .subtitle { font-size: 1.15em; color: #34495e; margin-bottom: 20px; }
     h2 { color: #2980b9; margin-top: 30px; }
-    ul { margin-left: 20px; }
+    ul, ol { margin-left: 20px; }
     .section { margin-bottom: 30px; }
+    .skills-list { columns: 2; }
+    .role { margin-bottom: 18px;}
+    a { color: #2980b9; }
   </style>
 </head>
 <body>
@@ -23,6 +26,71 @@
       Bachelor of Computer Science (Honours), Second Class (Upper), CGPA 3.0</li>
       <li><strong>Diploma in Computer Science</strong> | Universiti Teknologi MARA, Kampus Sunagi Petani Cawangan Kedah, Malaysia (Jun 2018 – Aug 2021)</li>
     </ul>
+  </div>
+
+  <div class="section">
+    <h2>Skills</h2>
+    <div class="skills-list">
+      <ul>
+        <li><strong>Programming Languages:</strong> Python, Java, C++, C#, PHP, SQL, HTML, CSS</li>
+        <li><strong>Tools & Software:</strong> Visual Studio, VS Code, Laragon, XAMPP, SSMS (SQL Server Management Studio), GitHub</li>
+        <li><strong>Machine Learning:</strong> Random Forest, Decision Tree, KNN, SVC</li>
+        <li><strong>Languages:</strong> Bahasa Melayu, English</li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="section">
+    <h2>Work Experience</h2>
+    <div class="role">
+      <strong>1. Backend Developer</strong> at Menang Idaman SDN BHD (Feb 2025 – Present)<br>
+      Designed and developed a responsive, web-based Property Management System using PHP and phpMyAdmin for database management, hosted on cPanel.<br>
+      <strong>Key features and capabilities:</strong>
+      <ul>
+        <li>Custom database for Sales & Purchase (S&P) and Rental property records.</li>
+        <li>Unlimited images/documents upload with strict validation (file type, size ≤ 50MB, required fields).</li>
+        <li>Confirmation message on successful submission.</li>
+        <li>Dashboard with tabbed views, full data management: view, edit, delete, replace.</li>
+        <li>History Tracking System: logs user actions (create, upload, delete, edit).</li>
+        <li>Tenant History for rentals: archives previous tenants before update.</li>
+        <li>PDF export & printing of property data, images, documents.</li>
+        <li>Mobile-friendly interface.</li>
+        <li>Role-based access control (Admin: full; Staff: limited).</li>
+        <li>Expiration Monitoring for rental end dates.</li>
+      </ul>
+      <strong>Other:</strong> IT support and WordPress web design: <a href="https://amanilife.my/" target="_blank">amanilife.my</a> (e-commerce & SEO).
+    </div>
+    <div class="role">
+      <strong>2. Web Designer & Postmaster Admin</strong> at Ministry of Health headquarters, Presint 1, Putrajaya (Sep 2024 – Dec 2024)<br>
+      <ul>
+        <li>Designed and developed new website layouts for modern functionality and improved user experience.</li>
+        <li>Managed and maintained the Postmaster system, sending critical emails to government agencies and institutions.</li>
+      </ul>
+    </div>
+    <div class="role">
+      <strong>3. IT Support & Web Developer Intern</strong> at Kulim Technology Park Corporation SDN BHD, Kulim, Kedah (Mar 2024 – Jun 2024)<br>
+      <ul>
+        <li>Developed a WordPress website for Kulim Golf & Country Resort (<a href="https://www2.kulimgolf.com.my/" target="_blank">kulimgolf.com.my</a>).</li>
+        <li>Updated e-procurement website to C# .NET version.</li>
+        <li>IT support for hardware/software setup, installation, reset, troubleshooting.</li>
+        <li>Event Participation:
+          <ul>
+            <li>KIDEC 2024: Exhibitor, explained KDC functions, demonstrated 3D printing, mini drone tutorials.</li>
+            <li>STEM4FUN: Introduced coding and Microsoft MakeCode to primary students.</li>
+            <li>Peneraju Tunas BRIDGE Bestari: Setup, management, documentation.</li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+    <div class="role">
+      <strong>4. Software Developer Intern</strong> at Pejabat Daerah & Tanah, Alor Setar, Kedah (Oct 2020 – Dec 2020)<br>
+      <ul>
+        <li>Developed the 'Sistem Penyimpanan Barang' for managing office items/assets using Java (NetBeans).</li>
+        <li>Features: Admin login/logout, asset value calculation (monthly/yearly), CRUD and search.</li>
+        <li>Used XAMPP and MySQL for database management.</li>
+        <li>Created posters and a corporate video.</li>
+      </ul>
+    </div>
   </div>
 </body>
 </html>
