--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <h1>BACHELOR OF COMPUTER SCIENCE</h1>
-  <div class="subtitle">Computer Science graduate passionate about backend and full-stack development, with proven hands-on experience in building web applications. Skilled in backend development, database management, web design, and machine learning applications. Experienced in delivering real-world projects using PHP, MySQL, Python, C#, and modern web technologies. Strong problem-solving and collaborative skills with a focus on scalable, maintainable solutions.</div>
+  <div class="subtitle">Computer Science graduate passionate about backend and full-stack development, with proven hands-on experience in building web applications. Skilled in backend development, web design, and IT support.</div>
 
   <div class="section">
     <h2>Education</h2>
@@ -38,6 +38,66 @@
         <li><strong>Languages:</strong> Bahasa Melayu, English</li>
       </ul>
     </div>
+  </div>
+
+  <div class="section">
+    <h2>Projects</h2>
+    <ol>
+      <li>
+        <strong>Heart Disease Prediction Using Random Forest</strong><br>
+        Developed in Python without external machine-learning libraries.<br>
+        Implemented the Random Forest algorithm.<br>
+        Utilized the K-Nearest Neighbors (KNN) algorithm for additional analysis (using a library).<br>
+        Employed the Support Vector Classifier (SVC) for additional analysis (using a library).<br>
+        Implemented a user-friendly Graphical User Interface (GUI) using Streamlit.<br>
+        Allowing users to input 13 features from the patient's medical record.<br>
+        Facilitated a straightforward process wherein users press the 'predict' button to execute the program.<br>
+        Interpretation of results: A prediction of 'heart disease' indicates the presence of the condition, while a result of 'no heart disease' signifies the patient's overall health without any heart-related concerns.
+      </li>
+      <li>
+        <strong>Animal Recognition Using CNN</strong>
+        <br><img src="/github/Screenshot 2023-01-24 104710.png" alt="animal recognition" style="max-width:300px;"><br>
+        Developed in MATLAB.<br>
+        Implemented a Convolutional Neural Network (CNN) for machine learning.<br>
+        Incorporated Image Processing techniques.<br>
+        Enabled user interaction by implementing a simple interface where users can select animal pictures using the 'browse' button.<br>
+        The selected image is displayed on the program interface.<br>
+        Executed the program through the 'Scan' button, utilizing a Convolutional Neural Network (CNN) for predictions, and providing results by displaying the recognized animal class.
+      </li>
+      <li>
+        <strong>Online Ordering System (website)</strong><br>
+        Developed using HTML, CSS, and PHP.<br>
+        Leveraged Laragon as the local development environment.<br>
+        Utilized MySQL for robust and efficient database management.<br>
+        Implemented user registration allowing customers to sign up.<br>
+        Customers can log in to their accounts to place orders.<br>
+        Simple GUI displayed a variety of food items for customers to browse and add to their cart.<br>
+        Enabled customers to remove selected items from their cart.<br>
+        Empowered the admin with the ability to:<br>
+        - View detailed order information.<br>
+        - Update and modify customer orders as needed.<br>
+        - Delete customer order details for administrative purposes.
+      </li>
+      <li>
+        <strong>Loan Prediction</strong>
+        <br><img src="/github/loan prediction.png" alt="loan prediction" style="max-width:300px;"><br>
+        Successfully developed a loan repayment prediction system.<br>
+        The system, GUI, and data processing were built using Python.<br>
+        <strong>Data Preprocessing and Cleaning:</strong><br>
+        Removed irrelevant features, Encoded categorical variables into numerical formats & Standardized features by removing unnecessary symbols.<br>
+        <strong>Exploratory Data Analysis:</strong><br>
+        Conducted correlation analysis using heatmaps & Filtered out low-impact features.<br>
+        <strong>Sampling and Balancing:</strong><br>
+        Addressed class imbalance by downsampling the majority class & Prepared separate datasets for training, testing, and evaluation.
+      </li>
+      <li>
+        <strong>Mini Project</strong>
+        <br><img src="/github/c crud.png" alt="gui random forest" style="max-width:300px;"><br>
+        Developed a client management system using C# in Visual Studio.<br>
+        This mini project showcases the implementation of CRUD (Create, Read, Update, Delete) operations.<br>
+        The project utilizes SQL Server Management Studio (SSMS) as the database management system.
+      </li>
+    </ol>
   </div>
 
   <div class="section">
