--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </div>
 
   <div class="section">
-    <h2>Work Experience</h2>
+    <h2>Work</h2>
     <div class="role">
       <strong>1. Backend Developer</strong> at Menang Idaman SDN BHD (Feb 2025 – Present)<br>
       Designed and developed a responsive, web-based Property Management System using PHP and phpMyAdmin for database management, hosted on cPanel.<br>
